Updated README.md's preview features instructions.